Update the reference.

--- a/Buoy-Project-Group-10.html
+++ b/Buoy-Project-Group-10.html
@@ -949,10 +949,25 @@ water_q4 = lm(WTMP~YYYY,data = meanq4_w)</code></pre>
 ## 3      Q3   -0.002110240
 ## 4      Q4    0.019466770</code></pre>
 </div>
-<div id="conclusion" class="section level3">
-<h3>3.4 Conclusion</h3>
-<p>From the plots shown above, the average air temperature over these 30 years did show an increasing tendency, no matter in quarterly scale or monthly scale. However, it seems that further information is still to be interpreted and explored, since we found out some interesting correlation between average water temperature and average air temperature.</p>
+<div id="conclusion-and-limitations" class="section level3">
+<h3>3.4 Conclusion and Limitations</h3>
+<p>From the plots shown above, the average air temperature over these 30 years did show an increasing tendency, no matter in quarterly scale or monthly scale.</p>
+<p>However, it seems that further information is still to be interpreted and explored, since we found out some interesting correlation between average water temperature and average air temperature.</p>
 <p>Also, the reason behind the variation of average air temperature is valuable to be digged in.</p>
+</div>
+</div>
+<div id="reference-and-acknowledge" class="section level2">
+<h2>4 Reference and Acknowledge</h2>
+<div id="references" class="section level3">
+<h3>4.1 References</h3>
+<p>[1]Hadley Wickham, Romain François, Lionel Henry, Kirill Müller.(2020) dplyr: A Grammar of Data Manipulation, version 1.0.2</p>
+<p>[2]Hadley Wickham.(2019) tidyverse: Easily Install and Load the ‘Tidyverse’, version 1.3.0</p>
+<p>[3]Alboukadel Kassambara.(2020) ggpubr: ‘ggplot2’ Based Publication Ready Plots, version 0.4.0</p>
+<p>[4]Tripti Dimri, Shamshad Ahmad and Mohammad Sharif. (2020) Time series analysis of climate variables using seasonal ARIMA approach. Journal of Earth System Science. 149 (2020)</p>
+</div>
+<div id="acknowledgement" class="section level3">
+<h3>4.2 Acknowledgement</h3>
+<p>We sincerely thank Prof.Haviland for helping us to obtain open source data and provide guidance for our project.</p>
 </div>
 </div>
 
